# devpi-cleaner

./: .gitignore  README.md  mkdocs.yml  mypy.ini  pyproject.toml  ruff.toml  tox.toml
src/devpi_cleaner/: cli.py  client.py
src/devpi_cleaner/utils/: find_heavy_packages.py
tests/: test_cli.py  test_client.py  test_integration.py
