[project]
name = "devpi-cleaner"
description = "Enables batch removal of packages from a devpi server."
license = "new BSD"
authors = [{ name = "Matthias Bach", email = "matthias.bach@blue-yonder.com" }]
readme = "README.md"
keywords = ["Devpi cleaner"]
classifiers = [
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Utilities",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "click>=8.2.1",
    "devpi-plumber>=0.7.0",
    "packaging>=25.0",
    "tenacity>=9.1.2",
    "tqdm>=4.67.1",
]

# Add console script entry point
[project.scripts]
devpi-cleaner = "devpi_cleaner.cli:clean_devpi_packages"

# Section: Dependency Groups
[dependency-groups]
dev = [
    "ddt>=1.7.2",
    "deptry>=0.23.0",
    "lxml>=5.3.1",
    "mypy>=1.14.1",
    "pymarkdownlnt>=0.9.26",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "ruff>=0.11.2",
    "tox>=4.25.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-markdownextradata-plugin>=0.2.6",
    "mkdocs-material>=9.6.9",
    "mkdocstrings>=0.26.1",
    "mkdocstrings-python>=1.11.1",
]

# Section: Build System
[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
enable = true
style = "pep440"  # Use PEP 440 style versioning
dirty = true  # Add ".dirty" suffix if there are uncommitted changes
format = "{base}.dev{distance}"  # Format version as {base}.dev{distance}

# Section: pytest configuration
[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.pymarkdown]
[tool.pymarkdown.plugins]
[tool.pymarkdown.plugins.MD007]
indent = 4
start_indent = 4

[tool.pymarkdown.plugins.MD013]
line_length = 350
code_block_line_length = 120
heading_line_length = 120
headings = false
tables = false

[tool.pymarkdown.extensions]
[tool.pymarkdown.extensions."front-matter"]
enabled = true
